k8s/f.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        role: worker
      containers:
      - name: frontend
        image: thaleswillianbeltrao17/pj-ks8-frontend:2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:   
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
