k8s/db.service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  # Remova o clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
